# stdplus

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c
include/stdplus/: inttypes.h  stdplus.h  types.h  vector.h  version.h.in
src/: mem.c
stdplus/: defines.h  mem.c  mem.h  stdplus.h  vector.h
tests/: CMakeLists.txt  vectest.c
